--- a/src/main/resources/assets/avaritia/lang/en_us.json
+++ b/src/main/resources/assets/avaritia/lang/en_us.json
@@ -1,15 +1,16 @@
 {
   "gamerule.neutroniumCompressorAmount.description": "Number of resources for Neutronium Compressor",
+  "gui.avaritia.neutronium_compressor_gui.button_www": "Clear",
   "block.avaritia.double_compressed_crafting_table": "Double Compressed Crafting Table",
   "itemGroup.tabavaritiatab": "Avaritia",
   "item.avaritia.planet_eater": "§cPlanet Eater§r",
-  "gui.avaritia.neutronium_compressor_gui.label_neutronium_compressor": "Neutronium Compressor",
   "item.avaritia.hoeofthe_green_earth": "§cHoe of the Green Earth§r",
+  "gui.avaritia.neutronium_compressor_gui.label_neutronium_compressor": "Neutronium Compressor",
   "item.avaritia.skullfire_sword": "§dSkullfire Sword§r",
   "item.avaritia.infinity_armor_chestplate": "§cInfinity Breastplate§r",
   "gamerule.worldBreakerBedrockBreak.description": "Allow breacks bedrock with World Breacker",
-  "gui.avaritia.neutron_collector_gui.label_neutron_collector": "Neutron Collector",
   "item.avaritia.crystal_matrix_ingot": "Crystal Matrix Ingot",
+  "gui.avaritia.neutron_collector_gui.label_neutron_collector": "Neutron Collector",
   "gamerule.world_breaker_bedrock_break.description": "Allow breacks bedrock with World Breacker",
   "item.avaritia.diamond_lattice": "Diamond Lattice",
   "gui.avaritia.neutronium_compressor_gui.label_bnbtnumberprocessvarinteg": "\u003cBNBT:number:process\u003e/\u003cVAR:integer:MaxCompressorResources\u003e",
