--- a/src/main/resources/assets/avaritia/lang/en_us.json
+++ b/src/main/resources/assets/avaritia/lang/en_us.json
@@ -4,24 +4,27 @@
   "block.avaritia.double_compressed_crafting_table": "Double Compressed Crafting Table",
   "itemGroup.tabavaritiatab": "Avaritia",
   "item.avaritia.planet_eater": "§cPlanet Eater§r",
-  "item.avaritia.hoeofthe_green_earth": "§cHoe of the Green Earth§r",
   "gui.avaritia.neutronium_compressor_gui.label_neutronium_compressor": "Neutronium Compressor",
+  "item.avaritia.hoeofthe_green_earth": "§cHoe of the Green Earth§r",
   "item.avaritia.skullfire_sword": "§dSkullfire Sword§r",
   "item.avaritia.infinity_armor_chestplate": "§cInfinity Breastplate§r",
   "gamerule.worldBreakerBedrockBreak.description": "Allow breacks bedrock with World Breacker",
-  "item.avaritia.crystal_matrix_ingot": "Crystal Matrix Ingot",
   "gui.avaritia.neutron_collector_gui.label_neutron_collector": "Neutron Collector",
+  "item.avaritia.crystal_matrix_ingot": "Crystal Matrix Ingot",
   "gamerule.world_breaker_bedrock_break.description": "Allow breacks bedrock with World Breacker",
+  "item.avaritia.skullfire_sword.description": "§8Beheads skeletons and scorches them black.§r",
   "item.avaritia.diamond_lattice": "Diamond Lattice",
   "gui.avaritia.neutronium_compressor_gui.label_bnbtnumberprocessvarinteg": "\u003cBNBT:number:process\u003e/\u003cVAR:integer:MaxCompressorResources\u003e",
   "block.avaritia.extreme_crafting_table": "Extreme Crafting Table",
   "item.avaritia.neutronium_ingot": "Neutronium Ingot",
+  "item.avaritia.neutronium_nugget.description": "§8About 35.6 million metric tons.§r",
   "gui.avaritia.extreme_crafting_table_gui.label_extreme_crafting_table": "Extreme Crafting Table",
   "block.avaritia.crystal_matrix": "Crystal Matrix",
   "gui.avaritia.neutronium_compressor_gui.label_material_bnbttextmaterial": "Material: \u003cBNBT:text:material\u003e",
   "item.avaritia.infinity_catalyst": "Infinity Catalyst",
   "item.avaritia.lapis_singularity": "Lapis Singularity",
   "item.avaritia.infinity_ingot": "Infinity Ingot",
+  "item.avaritia.infinity_ingot.description": "§8The fury of the universe in the palm of your hand.§r",
   "block.avaritia.neutron_collector": "Neutron Collector",
   "item.avaritia.ultimate_stew": "Ultimate Stew",
   "item.avaritia.cosmic_meatballs": "Cosmic Meatballs",
@@ -42,13 +45,17 @@
   "item.avaritia.black_hole_item": "Black Hole Item",
   "gamerule.world_breaker_bedrock_break": "Allow breacks bedrock with World Breacker",
   "item.avaritia.infinity_armor_leggings": "§cInfinity Leggings§r",
+  "item.avaritia.pileof_neutrons.description": "§8Try not to think about think.§r",
   "item.avaritia.emerald_singularity": "Emerald Singularity",
+  "item.avaritia.record_fragment.description": "§8One likes to believe in the freedom of music~§r",
+  "item.avaritia.neutronium_ingot.description": "§8The dense heart of a star in convenient ingot form.§r",
   "item.avaritia.swordofthe_cosmos": "§cSword of the Cosmos§r",
   "item.avaritia.nether_quartz_singularity": "Nether Quartz Singularity",
   "item.avaritia.pileof_neutrons": "Pile of Neutrons",
   "item.avaritia.infinity_armor_boots": "§cInfinity Boots§r",
   "item.avaritia.natures_ruin": "§cNature\u0027s Ruin§r",
   "item.avaritia.neutronium_nugget": "Neutronium Nugget",
+  "item.avaritia.crystal_matrix_ingot.description": "§8This isn\u0027t even its final form.§r",
   "item.avaritia.endest_pearl": "Endest Pearl",
   "item_group.avaritia.avaritiatab": "Avaritia",
   "block.avaritia.neutronium_block": "Neutronium Block",
