--- a/src/main/resources/assets/avaritia/lang/ru_ru.json
+++ b/src/main/resources/assets/avaritia/lang/ru_ru.json
@@ -4,7 +4,7 @@
   "block.avaritia.double_compressed_crafting_table": "Двойной сжатый верстак",
   "itemGroup.tabavaritiatab": "Avaritia",
   "item.avaritia.planet_eater": "§cПожиратель планет",
-  "item.avaritia.copper_singularity": "Emerald Singularity",
+  "item.avaritia.copper_singularity": "Медная Сингулярность",
   "gui.avaritia.neutronium_compressor_gui.label_neutronium_compressor": "Компрессор Нейтрония",
   "item.avaritia.hoeofthe_green_earth": "§cМотыга зеленой земли§r",
   "item.avaritia.skullfire_sword": "§dМеч Огненного-черепа§r",
@@ -22,18 +22,18 @@
   "gui.avaritia.extreme_crafting_table_gui.label_extreme_crafting_table": "Сложный верстак",
   "block.avaritia.crystal_matrix": "Кристальная матрица",
   "gui.avaritia.neutronium_compressor_gui.label_material_bnbttextmaterial": "Материал: \u003cBNBT:text:material\u003e",
-  "item.avaritia.netherite_singularity": "Amethyst Singularity",
+  "item.avaritia.netherite_singularity": "Незеритовая Сингулярность",
   "item.avaritia.infinity_catalyst": "Бесконечный катализатор",
   "item.avaritia.lapis_singularity": "Лазуритовая Сингулярность",
   "item.avaritia.infinity_ingot": "Бесконечный слиток",
   "item.avaritia.infinity_ingot.description": "§8Ярость Вселенной на ладони.§r",
   "block.avaritia.neutron_collector": "Коллектор Нейтрония",
   "item.avaritia.ultimate_stew": "Предельное рагу",
-  "item.avaritia.cosmic_meatballs": "Космические тефтели",
+  "item.avaritia.cosmic_meatballs": "Космические фрикадельки",
   "item.avaritia.world_breaker": "§cКрушитель Мира",
   "item.avaritia.golden_singularity": "Золотая Сингулярность",
   "gui.avaritia.neutron_collector_gui.label_bnbtnumberprocess": "\u003cBNBT:число процесса\u003e%",
-  "item.avaritia.amethyst_singularity": "Copper Singularity",
+  "item.avaritia.amethyst_singularity": "Аметистовая Сингулярность",
   "gui.avaritia.extreme_crafting_table_gui.button_craft": "Создать",
   "block.avaritia.compressed_crafting_table": "Сжатый верстак",
   "item.avaritia.longbowofthe_heavens": "Небесный лук",
@@ -60,7 +60,7 @@
   "item.avaritia.neutronium_nugget": "Кусочек Нейтрония",
   "item.avaritia.crystal_matrix_ingot.description": "§8Это еще не окончательная форма.§r",
   "item.avaritia.endest_pearl": "Бесконечный жемчуг",
-  "item_group.avaritia.avaritiatab": "Avaritia",
+  "item_group.avaritia.avaritiatab": "Аварития",
   "block.avaritia.neutronium_block": "Блок Нейтрониума",
   "entity.avaritia.black_hole": "Чёрная Дыра",
   "block.avaritia.infinity_block": "Бесконечный Блок"
