--- a/src/main/resources/assets/avaritia/lang/ru_ru.json
+++ b/src/main/resources/assets/avaritia/lang/ru_ru.json
@@ -53,12 +53,14 @@
   "item.avaritia.record_fragment.description": "§8Нравится верить в свободу музыки~§r",
   "item.avaritia.neutronium_ingot.description": "§8Плотное сердце звезды в виде удобного слитка.§r",
   "item.avaritia.swordofthe_cosmos": "§cМеч Космоса§r",
+  "item.avaritia.planet_eater_destroyer": "§cPlanet Eater§r",
   "item.avaritia.nether_quartz_singularity": "Кварцевая Сингулярность",
   "item.avaritia.pileof_neutrons": "Пылинка Нейтрония",
   "item.avaritia.infinity_armor_boots": "§cБесконечные ботинки§r",
   "item.avaritia.natures_ruin": "§cРазрушитель Природы§r",
   "item.avaritia.neutronium_nugget": "Кусочек Нейтрония",
   "item.avaritia.crystal_matrix_ingot.description": "§8Это еще не окончательная форма.§r",
+  "item.avaritia.world_breaker_hammer": "§cWorld Breaker§r",
   "item.avaritia.endest_pearl": "Бесконечный жемчуг",
   "item_group.avaritia.avaritiatab": "Аварития",
   "block.avaritia.neutronium_block": "Блок Нейтрониума",
