--- a/src/main/resources/assets/avaritia/lang/en_us.json
+++ b/src/main/resources/assets/avaritia/lang/en_us.json
@@ -53,12 +53,14 @@
   "item.avaritia.record_fragment.description": "§8One likes to believe in the freedom of music~§r",
   "item.avaritia.neutronium_ingot.description": "§8The dense heart of a star in convenient ingot form.§r",
   "item.avaritia.swordofthe_cosmos": "§cSword of the Cosmos§r",
+  "item.avaritia.planet_eater_destroyer": "§cPlanet Eater§r",
   "item.avaritia.nether_quartz_singularity": "Nether Quartz Singularity",
   "item.avaritia.pileof_neutrons": "Pile of Neutrons",
   "item.avaritia.infinity_armor_boots": "§cInfinity Boots§r",
   "item.avaritia.natures_ruin": "§cNature\u0027s Ruin§r",
   "item.avaritia.neutronium_nugget": "Neutronium Nugget",
   "item.avaritia.crystal_matrix_ingot.description": "§8This isn\u0027t even its final form.§r",
+  "item.avaritia.world_breaker_hammer": "§cWorld Breaker§r",
   "item.avaritia.endest_pearl": "Endest Pearl",
   "item_group.avaritia.avaritiatab": "Avaritia",
   "block.avaritia.neutronium_block": "Neutronium Block",
